tests/fixtures/invalid/round_dict_bytes.py
# Cannot call round() with Dict[str, int], Bytes
x = round({"a": 1}, b"hello")
